fixed image overlap

--- a/css/main.scss
+++ b/css/main.scss
@@ -328,8 +328,7 @@ h1 {
       .card-img {
         width: 30%;
         img {
-          width: 80px;
-          height: 80px;
+          width: 80%;
           border-radius: 50%;
         }
         margin-right: 1.5vw;
